﻿[B]Changelog[/B]
* Fixed: Added proper translation of "Recent" to the Swedish SBS Channels (Kanal 5, 9 and 11)

[I]Previous changes[/I]
* Fixed: some SVT streams had a very low bitrate or had weird audio (Fixes #1150)
* Fixed: SVT Genres (Fixes #1149)
* Fixed: SVT videos had no audio (Fixes #1143). This fix requires the InputStream Adaptvie add-on to be installed and enabled within Retrospect.
* Fixed: TV4 thumbs not showing (Fixes #1097)
* Added: search to UR Play (Fixes #1084).
* Changed: UR Play now uses HTTPS.
* Fixed: Reverted #1074 SVT Categories (Fixes #1080)
* Fixed: SVT Categories (Fixes #1074)
* Fixed: SVT Öppet arkiv playback (Fixes #1066)
* Fixed: Dplay.no had Swedish subs (Fixes #959)
* Updated: SVT textures thanks to Johan Asplund (Fixes #1049)
* Added: DPlay.dk for Danish videos via the Dplay platform (Fixes #959)
* Fixed: improper dates in Dplay.se and related channels (See #1042)
* Fixed: missed the "premium/paid" on videos still to be broad casted (Fixes #1042)
* Fixed: SVT Listing of Live Channels broke (Fixes #1023)
* Fixed: TV4/TV7.se were showing incorrect dates for the videos (Fixes #1004)
* Fixed: some TV4 stream did not work if the Adaptive Stream add-on was not used (Fixes #988)
* Added: Animal Planet, Discovery, Discovery World, Discovery Science, Investigative Discovery and VOX via dplay.no (Fixes #959)
* Added: Dplay.no FEM, MAX and TLC seperate channels (See #959)
* Added: Dplay.no fanart and seperate TVNorge channel (See #959)
* Fixed: renamed Dplay.se channel
* Fixed: TV4Play live items (Fixes #956)
* Added: Dplay.no (See #959)
* Fixed: TV4Play updated their API for TV4 and Sjuan (Fixes #954)
* Fixed: Dplay HTTP header issue (See #947)
* Fixed: Dplay (and others) now uses Adaptive add-on under Kodi Leia (Fixes #947)
* Fixed: Playback of Kanal5/9 (Fixes #936)
* Fixed: single videos did not play in genres (Fixes #932)
* Added: separate Dplay.se channel (Fixes #921)
* Fixed: TV4 Play json parsing issue (Fixes #919)