@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-* Fixed: Added proper translation of "Recent" to the Swedish SBS Channels (Kanal 5, 9 and 11)
+* Added: Duration and Expire Date to SVT
 
 [I]Previous changes[/I]
+* Fixed: Added proper translation of "Recent" to the Swedish SBS Channels (Kanal 5, 9 and 11)
 * Fixed: some SVT streams had a very low bitrate or had weird audio (Fixes #1150)
 * Fixed: SVT Genres (Fixes #1149)
 * Fixed: SVT videos had no audio (Fixes #1143). This fix requires the InputStream Adaptvie add-on to be installed and enabled within Retrospect.
